--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "generator-aspnetxianusdnx",
+    "name": "generator-aspnetdnx2",
     "version": "0.0.32",
     "description": "Yeoman generator for ASP.NET 5 apps",
     "license": "Apache License 2.0",
